# bazel-typescript-showcase

./: .bazelignore  .gitignore  README.md  WORKSPACE  tsconfig.json
frontend/: BUILD.bazel
frontend/module-one/: BUILD.bazel  index.js  tsconfig.json
frontend/module-ts/: BUILD.bazel  index.ts  tree.tsx  tsconfig.json
frontend/module-two/: BUILD.bazel  index.js
frontend/project-a/: BUILD.bazel  index.ts  myfile.ts  tsconfig.json
frontend/project-a/lib1/: BUILD.bazel  index.ts
frontend/project-a/lib2/: BUILD.bazel  index.js  tsconfig.json
frontend/project-b/: BUILD.bazel  index.ts  tsconfig.json
frontend/typescript/: BUILD.bazel  tsconfig.dts.json
frontend/webapp/: BUILD.bazel  es5.babelrc  index.ts  main.js  rollup.config.js  tsconfig.json
frontend/webapp/less/: BUILD.bazel  flex.less  main.less  price.less  variables.less
tools/web/: defs.bzl
