load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "tsconfig",
    srcs = [
        "index.js",
    ],
    allow_js = True,
    composite = True,
    extends = "//frontend/typescript:tsconfig.dts.json",
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [],
)

js_library(
    name = "module-one",
    package_name = "@module-one",
    srcs = [":index.js"],
)
