load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "tsconfig",
    srcs = ["index.ts"],
    composite = True,
    extends = "//frontend/typescript:tsconfig.dts.json",
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        "//frontend/project-b:tsconfig",
    ],
)

js_library(
    name = "project_a_lib",
    package_name = ":project-a",
    srcs = [":index.js"],
)
