load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@babel/cli:index.bzl", "babel")

ts_project(
    name = "tsconfig",
    srcs = ["index.ts"],
    allow_js = True,
    composite = True,
    extends = "//frontend/typescript:tsconfig.dts.json",
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        "//frontend/project-a:tsconfig",
        "//frontend/project-a/lib2:tsconfig",
    ],
)

rollup_bundle(
    name = "bundle",
    srcs = [
        "index.js",
        "//frontend/project-a:tsconfig",
        "//frontend/project-a/lib1:tsconfig",
        "//frontend/project-a/lib2:tsconfig",
        "//frontend/project-b:tsconfig",
    ],
    config_file = "rollup.config.js",
    entry_point = "index.js",
    # link_workspace_root = True,
    deps = [
        "@npm//@rollup/plugin-alias",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//rollup-plugin-includepaths",
    ],
)

babel(
    name = "bundle_es5",
    args = [
        "$(execpath bundle)",
        "--config-file",
        "./$(execpath es5.babelrc)",
        "--out-dir",
        "$(@D)",
    ],
    data = [
        "bundle",
        "es5.babelrc",
        "@npm//@babel/preset-env",
    ],
    output_dir = True,
)
