load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "bundle",
    srcs = [
        "main.js",
    ],
    config_file = "rollup.config.js",
    entry_point = "main.js",
    deps = [
        "//frontend/module-one",
        "//frontend/module-two",
        "@npm//@babel/preset-react",
        "@npm//@rollup/plugin-babel",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
    ],
)
