load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "tsconfig",
    srcs = ["index.ts"],
    composite = True,
    extends = "//frontend/typescript:tsconfig.dts.json",
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
)
