load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

# package(default_visibility = ["//visibility:public"])

# js_library(
#     name = "my_pkg",
#     # Code that depends on this target can import from "@myco/mypkg"
#     package_name = "@clouway/project-a/lib2",
#     # Consumers might need fields like "main" or "typings"
#     srcs = ["index.js"],
# )

load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "tsconfig",
    srcs = ["index.js"],
    allow_js = True,
    composite = True,
    extends = "//frontend/typescript:tsconfig.dts.json",
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "my_pkg",
    # The .js and .d.ts outputs from above will be part of the package
    deps = [":tsconfig"],
)
